# co-scientists-mcp

./: .firebaserc  .gitignore  README.md  firebase.json
apps/local-mcp/: config.toml.example  pyproject.toml
apps/local-mcp/co_scientist_local/: __init__.py  __main__.py  auth.py  config.py  constants.py  exporters.py  guide.py  image_gen.py  manuscript.py  mcp_server.py  ssh.py  state.py  util.py
apps/local-mcp/co_scientist_local/backends/: __init__.py  base.py  firestore.py  memory.py
apps/local-mcp/co_scientist_local/tools/: __init__.py  activity.py  analyses.py  csl.py  deck_render.py  decks.py  exports.py  figures.py  images.py  imports.py  materials.py  memory.py  papers.py  references.py  requirements.py  reviews.py  runs.py  sections.py  servers.py  slide_patterns.py  slide_render_helpers.py  ssh_ops.py  tables.py  verification.py
apps/web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/: App.js  (+12 more)
docs/: README.md  architecture.md  comments.md  doi-verification.md  mcp-tools.md  plans.md  setup-host.md  setup-user.md
docs/decisions/: 001-no-cloud-mcp.md  002-per-project-api-key.md  003-pro-only-image-gen.md  004-firestore-storage-rest.md
docs/todo/: 001_native_language_prose_in_harness.md  002_rich_slide_rendering.md  004_design_methodology_for_code_slides.md  005_pattern_library_quality.md  006_slide_typology_and_layout_effects.md  007_pattern_library_api_consistency.md  008_figure_space_typography_hero_pattern.md  009_pattern_ceiling_deck_chrome_density.md  010_defer_mode_decision_to_authoring.md  011_visual_prior_density_chrome.md  012_strip_structural_templating.md  (+1 more)
firebase/: storage-cors.json
firestore/: indexes.json  rules.firestore  rules.storage
scripts/: grant_admin.py  inspect_reviews.py  smoke.py
tests/: conftest.py  test_analyses.py  test_auth.py  test_cli.py  test_config.py  test_csl.py  test_deck_render.py  test_decks.py  test_exports.py  test_figures.py  test_hooks.py  test_images.py  test_imports.py  test_materials.py  test_mcp_wiring.py  test_memory.py  test_papers.py  test_references.py  test_requirements.py  test_reviews.py  test_runs.py  test_sections.py  test_servers.py  test_ssh_ops.py  test_tables.py  test_verification.py
(+58 files in other folders)
