[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "co-scientist-local"
version = "0.0.1"
description = "Local MCP server for co-scientist-cloud (Claude Code <-> Firestore)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
firebase = [
    "firebase-admin>=6.5",
    "google-cloud-firestore>=2.16",
    "google-cloud-storage>=2.16",
]
deck = [
    "python-pptx>=1.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
co-scientist-local = "co_scientist_local.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["co_scientist_local*"]

[tool.pytest.ini_options]
testpaths = ["../../tests"]
asyncio_mode = "auto"
